MFH: Fixed bug #25127 (reset memory_limit before terminating the request)